Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122924

Failed DCHECKs in videoplayer example

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.3, 6.9
    • 6.6.2, 6.7, 6.8
    • WebEngine
    • None
    • Windows
    • 8d4c9bda1 (126-based), 6a9b85d7d (122-based), 03019ab7d (130-based), f36df6e35 (122-based), eb569ff78 (118-based), 0b62230aa (134-based-refactor), 127a915b5 (134-based-refactor)

      Changing between fullscreen and windowed mode in the videoplayer example has a chance to trigger one of several DCHECKs: one in FrameSequenceTracker, one in PropertyTrees, and one in FrameInfo. This happens somewhat at random, but can usually be triggered within the first five switches. Attached are the chromium stack traces.

      The PropertyTrees crashes can also be easily reproduced by following this link in simplebrowser and scrolling around for a couple of seconds: https://css-tricks.com/books/greatest-css-tricks/scroll-animation/

        1. trace.txt
          23 kB
        2. trace2.txt
          14 kB
        3. trace3.txt
          20 kB
        For Gerrit Dashboard: QTBUG-122924
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            kchehlarski Kaloyan Chehlarski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes